--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,8 +93,11 @@ jobs:
           mask-password: 'true'
       
       - name: Pull latest images
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
         run: |
-          docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest || echo "Image not found, will be created in first run"
+          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:latest
          
       #- name: Stop and remove container if running
       #  run: |
@@ -105,8 +108,11 @@ jobs:
           docker ps -q --filter "name=etlpipeline" | grep -q . && docker stop etlpipeline && docker rm -fv etlpipeline || echo "No existing container"
           
       - name: Run Docker Image to serve users
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
         run: |
-          docker run -d -p 8080:8000 --name=etlpipeline -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}' ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker run -d -p 8080:8000 --name=etlpipeline -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}' $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
       - name: Clean previous images and containers
         run: |
